# vima

./: .gitignore  MANIFEST.in  README.md  association.py  benchmark_cellcounts.py  core.py  core_pytorch.py  data.py  harmonize.R  ingest.py  model.py  setup.cfg  training.py  vis.py  vis_pytorch.py
data/: __init__.py  harmonize.R  ingest.py  patchcollection.py  samples.py
demo/: demo.ipynb  demo_IF.ipynb  demo_IHC.ipynb  demo_ST.ipynb
demo/data/: ST.1.makedata.py  ST.1.verify_region.ipynb  ST.2.checkdata.ipynb
demo/data/IF/: metadata.csv
demo/data/ST/: samplemeta.tsv
models/: resnet_using_light_basic_block_decoder.py  resnet_using_light_basic_block_encoder.py  resnet_vae.py  resnetlight_advanced_encoder.py  resnetlight_simple_decoder.py  resnetlight_simple_encoder.py  simple_vae.py  vae.py
src/vima/: __init__.py  association.py  cc.py  composition.py  fingerprints.py  patchfeatures.py  vis.py
src/vima/data/: __init__.py  patchcollection.py  samples.py
src/vima/ingest/: __init__.py  dimreduce.py  harmonize.R  ingest.py  nonst.py  st.py  util.py
src/vima/models/: __init__.py  resnet_vae.py  resnetlight_advanced_decoder.py  resnetlight_decoder.py  resnetlight_encoder.py  vae.py
src/vima/train/: logging.py  training.py
src/vima/vis/: __init__.py  features.py  patches.py  patchexamples.py  spatial.py  umaps.py
