[metadata]
name = vima-spatial
version = 0.1.3
author = Yakir Reshef
author_email = yreshef@broadinstitute.org
description = variationa inference-based microniche analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yakirr/vima
project_urls =
    Bug Tracker = https://github.com/yakirr/vima/issues
    Tutorial = https://github.com/yakirr/vima/blob/main/README.md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.12.3
install_requires = 
        torch>=2.3.0
        torchvision>=0.18.0
        anndata>=0.10.7
        matplotlib
        multianndata
        numpy>=1.26.4
        scanpy
        cv2
        xarray
        seaborn
        pandas>=2.2.3
        scipy
        mpl_toolkits
        cna>=0.2.2
        tqdm
        skimage
        IPython

[options.packages.find]
where = src